package es.carlosgs.instdepor;

import java.util.List;

public class Socio {
    private String nombre;
    private String direccion;
    private String ciudad;
    private String provincia;
    private String telefono;
    private float cuota;

    private List<Reserva> reservas;
}
